--- a/pokedex-front-end/pokedex-app/package.json
+++ b/pokedex-front-end/pokedex-app/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
     "bulma": "^0.9.3",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
